# topview

./: .gitignore  AGENTS.md  README.md  api.py  app.py  model.py  pdb_writer.py  pyproject.toml  worker.py
.codex/: cprompt.txt  init.md  init.txt  mprompts.txt  pprompt.txt
.codex/agents/: coder.md  mapper.md  planner.md
codebase-analysis-docs/: codebasemap.md
codebase-analysis-docs/assets/: architecture-overview.mmd
codebase-docs/: codebasemap.md
codebase-docs/assets/: architecture-overview.mmd  main-execution-sequence.mmd  module-dependencies.mmd
docs/: codebasemap.md
plans/: nmr-restraint-filters-26-03-09.md
scripts/: check_parm7_dihedrals.py
tests/: test_cli.py  test_improper_selection.py  test_lj_parmed.py  test_mapping.py  test_nmr_restraints.py  test_optional_prmtop_sections.py  test_parm7_highlights.py  test_rdkit_depiction.py  test_rotatable_dihedral.py  test_system_info_selection.py
tests/data/: wcn.parm7  wcnref.rst7
topview/: __init__.py  __main__.py  app.py  bridge.py  config.py  errors.py  logging_config.py  worker.py
topview/cli/: __init__.py  topview.py
topview/model/: __init__.py  highlights.py  model.py  query.py  state.py
topview/services/: lj.py  loader.py  nmr_restraints.py  parm7.py  pdb_writer.py  system_info.py  system_info_selection.py
web/: app.js  index.html  styles.css
web/src/: app.js  bridge.js  constants.js  parm7.js  selection.js  state.js  system_info.js  ui.js  utils.js  viewer.js
