[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topview"
version = "0.1.0"
description = "Desktop viewer for AMBER parm7 + rst7 files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Topview Contributors"}
]
dependencies = [
  "numpy<2",
  "MDAnalysis>=2.0",
  "parmed>=4.2",
  "pandas>=2.0",
  "pywebview[qt]>=6.1",
  "PyQt6>=6.5",
  "qtpy>=2.4",
  "rdkit>=2025",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.0",
]

[project.scripts]
topview = "topview.cli.topview:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["topview*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
